--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/favicon.png",
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
@@ -95,7 +97,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "favicon.png",
+              "assets"
             ],
             "styles": [
               "src/styles.scss"
